feature: Increase the client additional_information length limit
- Change the database data type from varchar to text type
- Ensure enough space for JwkSet configuration for private_key_jwt